# console-client

./: .gitignore
docker-build/: build.sh  clean.sh
docker-build/alpine/: Dockerfile  docker-compose.yml
docker-build/centos/: Dockerfile  docker-compose.yml
docker-build/ubuntu/: Dockerfile  docker-compose.yml
pCloudCC/: CMakeLists.txt
pCloudCC/lib/pclsync/: pcompat.c  pfs.c
